instances/model-registry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhoai-model-registries
  labels:
    app.kubernetes.io/part-of: ai-model-security-pipeline
    kubernetes.io/metadata.name: rhoai-model-registries
  annotations:
    openshift.io/display-name: "RHOAI Model Registries"
