instances/model-registry/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-registry-db
  namespace: rhoai-model-registries
  labels:
    app.kubernetes.io/name: model-registry-db
    app.kubernetes.io/part-of: ai-model-security-pipeline
spec:
  selector:
    name: model-registry-db
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
      protocol: TCP
      appProtocol: tcp
